Fix spacing, caps, etc

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,3 +3,7 @@
   width: 20rem;
   margin: 1rem;
 }
+
+.capitalize {
+  text-transform: capitalize;
+}
